--- a/path/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/path/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -37,6 +37,7 @@
         <label for="accept" class="check_label">Согласен с <a href="">пользовательским соглашением</a></label>
         <div class="error_text">Текст ошибки</div>
     </div>
+    {{ form_widget(form._token) }}
     <div class="green_button register">Продолжить</div>
     <div style="clear: both;"></div>
 </form>
