--- a/path/src/Insurance/ContentBundle/Resources/views/form_errors.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/form_errors.html.twig
@@ -5,7 +5,7 @@
         {% if errors|length > 0 %}
             {% for error in errors %}
                 {{ error.message }},
-            {% endfor %}>
+            {% endfor %}
         {% endif %}
     {% endspaceless %}
     {% endif %}
